--- a/dropline_menu.css
+++ b/dropline_menu.css
@@ -31,13 +31,10 @@ note that the position proerty is not set.
     list-style: none;
     margin: 0px;
     padding: 6px;
-    /*background-color:#69A9B1;*/
     display: inline;
     width: 100%;
     height: 100%;
     /*border-right: 1px solid #03316f;*/
-    
-    background-color: rgb(236,237,241);
 }
 /* 
 Style for the anchor tag defined in the parent. 
